fix z-index

--- a/recipes/src/app/header/header.component.scss
+++ b/recipes/src/app/header/header.component.scss
@@ -26,7 +26,7 @@
   justify-content: center;
   flex-grow: 1;
   height: 50px;
-  margin-top: 25px;
+  margin-top: 109px;
   transition: 0.5s all ease-in-out;
 }
 
@@ -40,7 +40,6 @@ a.main-header {
   }
   .logo {
     width: 30px;
-    height: auto;
     margin-right: 7px;
     display: inline;
   }
